--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,38 +7,43 @@
     >
 
     <fragment
-        android:id="@+id/nav_home"
+        android:id="@id/nav_home"
         android:name="com.tosin.healthee.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_nav_home_to_fab"
+            app:destination="@id/fab" />
+    </fragment>
 
     <fragment
-        android:id="@+id/nav_gallery"
+        android:id="@id/nav_gallery"
         android:name="com.tosin.healthee.ui.gallery.GalleryFragment"
         android:label="@string/menu_browse"
         tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
+        android:id="@id/nav_slideshow"
         android:name="com.tosin.healthee.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_starred"
         tools:layout="@layout/fragment_slideshow" />
 
     <fragment
-        android:id="@+id/nav_tools"
+        android:id="@id/nav_tools"
         android:name="com.tosin.healthee.ui.tools.ToolsFragment"
         android:label="@string/menu_tools"
         tools:layout="@layout/fragment_tools" />
 
     <fragment
-        android:id="@+id/nav_share"
+        android:id="@id/nav_share"
         android:name="com.tosin.healthee.ui.share.ShareFragment"
         android:label="@string/menu_share"
         tools:layout="@layout/fragment_share" />
 
     <fragment
-        android:id="@+id/nav_send"
+        android:id="@id/nav_send"
         android:name="com.tosin.healthee.ui.send.SendFragment"
         android:label="@string/menu_support"
         tools:layout="@layout/fragment_send" />
+
 </navigation>
